{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 383,
  "lineage": "aaf8c239-a77b-456d-19b5-9ef845f8a4b9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "k_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07df4cb7e10b155c1",
            "arn": "arn:aws:ec2:ap-south-1:900840136675:elastic-ip/eipalloc-07df4cb7e10b155c1",
            "domain": "vpc",
            "id": "eipalloc-07df4cb7e10b155c1",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-57-145.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.57.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "MyProject"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "MyProject"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:internet-gateway/igw-03ddd2cdf64d18f0a",
            "id": "igw-03ddd2cdf64d18f0a",
            "owner_id": "900840136675",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-igw",
              "Project": "MyProject"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-igw",
              "Project": "MyProject"
            },
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07df4cb7e10b155c1",
            "association_id": "eipassoc-0b5848f092763ea42",
            "connectivity_type": "public",
            "id": "nat-03154ed3007e09f71",
            "network_interface_id": "eni-09d9e95461549c94c",
            "private_ip": "10.0.1.142",
            "public_ip": "15.207.57.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f9d6be9260d7a9d",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.k_eip",
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:route-table/rtb-00225159b3cc209c6",
            "id": "rtb-00225159b3cc209c6",
            "owner_id": "900840136675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03154ed3007e09f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-routetable"
            },
            "tags_all": {
              "Name": "private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.k_eip",
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_nat_gateway.k_nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:route-table/rtb-0c096c9b42a246ea8",
            "id": "rtb-0c096c9b42a246ea8",
            "owner_id": "900840136675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ddd2cdf64d18f0a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable"
            },
            "tags_all": {
              "Name": "routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k_private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.11.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e10504845603a9",
            "route_table_id": "rtb-00225159b3cc209c6",
            "subnet_id": "subnet-05d69547450d92284"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.k_eip",
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_nat_gateway.k_nat",
            "module.vpc.aws_route_table.k_private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        },
        {
          "index_key": "10.0.12.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9b63115e548761b",
            "route_table_id": "rtb-00225159b3cc209c6",
            "subnet_id": "subnet-026c67e3f79bf6623"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.k_eip",
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_nat_gateway.k_nat",
            "module.vpc.aws_route_table.k_private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae1ba388da9f9323",
            "route_table_id": "rtb-0c096c9b42a246ea8",
            "subnet_id": "subnet-03f9d6be9260d7a9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_route_table.k_public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01906b9d45b63cf3b",
            "route_table_id": "rtb-0c096c9b42a246ea8",
            "subnet_id": "subnet-09d471bcc573684c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.k_igw",
            "module.vpc.aws_route_table.k_public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.11.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:subnet/subnet-05d69547450d92284",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d69547450d92284",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900840136675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k_vpc"
          ]
        },
        {
          "index_key": "10.0.12.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:subnet/subnet-026c67e3f79bf6623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026c67e3f79bf6623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900840136675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:subnet/subnet-03f9d6be9260d7a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f9d6be9260d7a9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900840136675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k_vpc"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:subnet/subnet-09d471bcc573684c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d471bcc573684c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900840136675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet",
              "kubernetes.io/cluster/k-dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a0fada86c90cee42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.k_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900840136675:vpc/vpc-0a0fada86c90cee42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00861c8777c6a4a58",
            "default_route_table_id": "rtb-05c6afa491c95a9e3",
            "default_security_group_id": "sg-0da73ea96208f230f",
            "dhcp_options_id": "dopt-02e811f37ae0e4ca1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0fada86c90cee42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c6afa491c95a9e3",
            "owner_id": "900840136675",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-vpc",
              "Project": "MyProject"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-vpc",
              "Project": "MyProject"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}